fix layout issue

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -335,7 +335,7 @@
   padding-bottom: 40px;
   padding-right:20px;
   padding-left: 40px;
-  margin-top: -20px;
+  margin-top: 50px;
   width: 100%;
   overflow: auto;
 }
